Bug fixes
->Ticket Bug fixed!

->Charts colors are revised!

->ClerkUsers getUser optimized!