@@ -138,6 +138,10 @@ public class ClerkUsers {
     }
 
     public static HashMap<String, Object> getUser(String userId) throws Exception {
+        if (userId == null) {
+            throw new Exception("Error getting user: userId is null");
+        }
+        
         Dotenv dotenv = Dotenv.configure().directory("../Frontend").filename(".env.local").load();
         Clerk sdk = Clerk.builder()
             .bearerAuth(dotenv.get("VITE_CLERK_SECRET_KEY"))
@@ -147,13 +151,35 @@ public class ClerkUsers {
             GetUserResponse res = sdk.users().get()
                 .userId(userId)
                 .call();
-    
+            
+            if (res.user().isEmpty()) {
+                throw new Exception("User not found in Clerk");
+            }
+            
             HashMap<String, Object> user = new HashMap<>();
-            user.put("full_name", res.user().get().firstName().get() + " " + res.user().get().lastName().get());
-            if (res.user().get().emailAddresses().isPresent())
-                user.put("email", res.user().get().emailAddresses().get().getFirst().emailAddress());
-            if (res.user().get().phoneNumbers().isPresent())
-                user.put("phone", res.user().get().phoneNumbers().get().getFirst().phoneNumber());
+            
+            // Safe access to firstName and lastName
+            String firstName = res.user().get().firstName().orElse("");
+            String lastName = res.user().get().lastName().orElse("");
+            user.put("full_name", firstName + " " + lastName);
+            
+            // Safely get email (if available)
+            if (res.user().get().emailAddresses().isPresent() && 
+                !res.user().get().emailAddresses().get().isEmpty()) {
+                user.put("email", res.user().get().emailAddresses().get().get(0).emailAddress());
+            } else {
+                // Default email value if none exists
+                user.put("email", "");
+            }
+            
+            // Safely get phone (if available)
+            if (res.user().get().phoneNumbers().isPresent() && 
+                !res.user().get().phoneNumbers().get().isEmpty()) {
+                user.put("phone", res.user().get().phoneNumbers().get().get(0).phoneNumber());
+            } else {
+                // Default phone value if none exists
+                user.put("phone", "");
+            }
             
             // Get user preferences from metadata
             if (res.user().get().publicMetadata().isPresent()) {
@@ -185,10 +211,11 @@ public class ClerkUsers {
                 user.put("lan", "en");
                 user.put("news", false);
             }
-    
+            
             return user;
         }
         catch (Exception e) {
+            e.printStackTrace();
             throw new Exception("Error getting user: " + e.getMessage());
         }
     }
